fixed nav z-index

--- a/queries.css
+++ b/queries.css
@@ -133,6 +133,7 @@
   }
 
   .nav-open .main-nav {
+    z-index: 1;
     opacity: 1;
     pointer-events: auto;
     visibility: visible;
