--- a/style.css
+++ b/style.css
@@ -298,7 +298,6 @@ header {
   font-weight: 700;
   letter-spacing: -1px;
   color: #343a40;
-  position: relative;
   line-height: 1.1;
   /* color: #495057; */
 }
@@ -454,7 +453,6 @@ header {
 
 .module-text strong {
   cursor: pointer;
-  /* text-decoration: underline; */
 }
 
 .swal2-popup {
